--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "raw-body": "^2.5.2"
   },
   "devDependencies": {
