--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node -r tsconfig-paths/register dist/index.js",
     "build": "tsc",
-    "start": "node dist/index.js",
     "dev": "nodemon",
     "seed": "ts-node --transpile-only prisma/seed.ts"
   },
@@ -26,6 +25,7 @@
     "joi": "^17.13.3",
     "joi-to-typescript": "^4.14.0",
     "raw-body": "^2.5.2",
+    "tsconfig-paths": "^4.2.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
@@ -35,7 +35,6 @@
     "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
